# Styx

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
cmd/: main.go  root.go
configs/: test-enviroment.md
firewall/: go.mod
internal/ebpf/: collect.go  counter.go  dispacher.go  ebpf.go  filter_ip.go  filter_mac.go
internal/ebpf/ebpf_module_kernel/: collect.c  counter.ebpf.c  dispacher.ebpf.c  filter_ip.c  filter_ip.ebpf.c  filter_mac.ebpf.c
internal/ebpf/ebpf_module_user/: collect.go  counter.go
internal/firewall/: firewall.go
internal/firewall/ebpf/: counter_bpfeb.go  counter_bpfel.go
internal/utils/: logger.go  network.go  utils.go
internal/utils/logger/: logger.go
internal/web/: README.md  go.mod  go.sum
internal/web/cmd/: main.go
internal/web/internal/handlers/: getabout.go  getabout_test.go  gethome.go  getlogin.go  getregister.go  notfound.go  postlogin.go  postlogin_test.go  postregister.go  postregister_test.go
internal/web/internal/middleware/: middleware.go
internal/web/internal/templates/: layout.templ  (+1 more)
log-manager/: requirements.txt
log-manager/static/: index.css
log-viewer/: .prettierignore  Dockerfile  app.py  index.html  pyproject.toml  requirements.txt  tailwind.config.js
log-viewer/static/: ag-theme.css  index.css  index.js
log-viewer/static/css/: index.css  style.min.css
log-viewer/static/js/: cookies.js  errors.js  filters.js  index.js  table.js
scripts/: convert_to_public.sh  entrypoint.sh  run_log-manager.sh
tests/: test.go  tests
webui/: notdone.todo
(+5 files in other folders)
