[project]
name = "log-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.8.6",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
]
